Some code improvements for Java 11